updated pom file