@@ -9,8 +9,16 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<serenity.version>1.5.11</serenity.version>
 		<serenity.cucumber.version>1.5.7</serenity.cucumber.version>
+        <java.version>1.8</java.version>
+         <slf4j.version>1.7.25</slf4j.version>
+         <log4j.version>1.2.16</log4j.version>
+         <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>2.20</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>2.20</maven.failsafe.plugin.version>
+		
 	</properties>
 
 	<dependencies>
@@ -32,46 +40,48 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.25</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<version>${log4j.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
 
 	<build>
-	
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
+				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.20</version>
+				<version>${maven.failsafe.plugin.version}</version>
 				<configuration>
-					<parallel>classes</parallel>
-					<threadCount>4</threadCount>
-					<perCoreThreadCount>true</perCoreThreadCount>
+					<forkCount>15</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
 				</configuration>
 				<executions>
 					<execution>
@@ -82,31 +92,8 @@
 					</execution>
 				</executions>
 			</plugin>
- <plugin>
-                <groupId>com.github.temyers</groupId>
-                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
-                <version>4.2.0</version>
-                <executions>
-                    <execution>
-                        <id>generateRunners</id>
-                        <phase>generate-test-sources</phase>
-                        <goals>
-                            <goal>generateRunners</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Mandatory -->
-                            <!-- List of package names to scan for glue code. -->
-                            <glue>
-                            
-                                <package>com.brick</package>
-                            </glue>
-                            <parallelScheme>SCENARIO</parallelScheme>
-                            <customVmTemplate>src/test/resources/cucumber-serenity-runner.vm</customVmTemplate>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-			
+
+
 			<plugin>
 				<groupId>net.serenity-bdd.maven.plugins</groupId>
 				<artifactId>serenity-maven-plugin</artifactId>
@@ -121,8 +108,35 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.github.temyers</groupId>
+				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
+				<version>4.2.0</version>
+				<executions>
+					<execution>
+						<id>generateRunners</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>generateRunners</goal>
+						</goals>
+						<configuration>
+							<!-- Mandatory -->
+							<!-- List of package names to scan for glue code. -->
+							<glue>
+								<package>com.brick</package>
+							</glue>
+							<parallelScheme>FEATURE</parallelScheme>
+							<featuresDirectory>src/test/resources</featuresDirectory>
+							<customVmTemplate>src/test/resources/cucumber-serenity-runner.vm</customVmTemplate>
+						</configuration>
+
+					</execution>
+
+				</executions>
+			</plugin>
+
 		</plugins>
-		
+
 	</build>
 
 
